Add Subaru and SCExAO pupils to tutorial.

--- a/doc/tutorial_notebooks/TelescopePupils/TelescopePupils.ipynb
+++ b/doc/tutorial_notebooks/TelescopePupils/TelescopePupils.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,6 +346,8 @@
     "    ('HST', make_hst_aperture),\n",
     "    ('JWST', make_jwst_aperture),\n",
     "    ('Keck', make_keck_aperture),\n",
+    "    ('Subaru', make_subaru_aperture),\n",
+    "    ('SCExAO', make_scexao_aperture),\n",
     "]\n",
     "\n",
     "pupil_grid = make_pupil_grid(512)\n",
@@ -376,7 +378,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "dev",
    "language": "python",
    "name": "python3"
   },
@@ -390,15 +392,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.10.15"
   },
   "level": "beginner",
-  "thumbnail_figure_index": -1,
-  "vscode": {
-   "interpreter": {
-    "hash": "eab81245928141ddc183f21cd42de106d7a16aebcc9869ae403497004d74bf9b"
-   }
-  }
+  "thumbnail_figure_index": -1
  },
  "nbformat": 4,
  "nbformat_minor": 2
